# RAGSend-For-Hotel-Marketing

./: .gitignore  .replit  package.json
dagster-pipeline/: README.md  pyproject.toml  setup.cfg  setup.py  template.txt
dagster-pipeline/data/hotel_descriptions/: 123-Castro-Street-San-Francisco-CA-94114.txt  123-Chinatown-Street-San-Francisco-CA-94108.txt  123-Chocolate-Avenue-San-Francisco-CA-94109.txt  123-Ferry-Building-San-Francisco-CA.txt  123-Fictitious-Street-San-Francisco-CA-94108.txt  123-Fisherman's-Wharf-San-Francisco-CA-94133.txt  123-Ghirardelli-Square-San-Francisco-CA.txt  123-Golden-Gate-Avenue-San-Francisco-CA-94102.txt  123-Main-St-San-Francisco-CA-94101.txt  123-Main-Street-San-Francisco-CA-94102.txt  123-Main-Street-San-Francisco-CA-94111.txt  123-Main-Street-San-Francisco-CA-94123.txt  123-Main-Street-San-Francisco-CA.txt  (+16 more)
dagster-pipeline/hotel_rag_marketing/: assets.py
dagster-pipeline/hotel_rag_marketing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
webclient/: .env.example  next.config.js  package-lock.json  package.json  pyproject.toml  search-weaviate.py
webclient/app/: .page.tsx.1502489447~  globals.css  layout.tsx  page.tsx  temp.txt
webclient/app/about/: page.tsx
webclient/app/api/auth/[...nextauth]/: route.ts
webclient/app/api/campaigns/: route.ts
webclient/app/campaigns/: page.tsx
webclient/app/hotels/: page.tsx
webclient/app/hotels/[...uuid]/: page.tsx
webclient/app/overview/: page.tsx
webclient/components/aj/: dashboardPageLayout.tsx  navbar.tsx  navmenu.tsx
webclient/components/ui/: navigation-menu.tsx
(+29 files in other folders)
